<resources>
    <string name="app_name">Lab_1_2_UIT_14521020</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="signup">Sign up</string>
    <string-array name="array_name">
        <item>Nam</item>
        <item>Phuong</item>
        <item>Binh</item>
        <item>Dia</item>
    </string-array>


    <string name="id">ID:</string>
    <string name="full_name">Full Name:</string>
    <string name="is_manager">Is A Manager:</string>
    <string name="staff">Staff</string>
    <string name="add">Add</string>

</resources>
