<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_basex4"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textSize="@dimen/text_large" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_sign_in"
        android:layout_marginTop="@dimen/margin_basex4"
        android:text="@string/username" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_user_name"
        android:layout_toRightOf="@+id/tv_user_name"
        android:hint="name@gmail.com" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="@dimen/margin_base"
        android:hint="******"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_password"
        android:layout_toRightOf="@+id/tv_password"
        android:password="true" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="@dimen/margin_base"
        android:padding="@dimen/margin_base"
        android:text="@string/sign_in" />
    
    <LinearLayout
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="SIGN IN VIA FABCEBOOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="SIGN UP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
